ExpressionParser/src/com/nosliw/expression/parser/NosliwExpressionParser.java
/* NosliwExpressionParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. NosliwExpressionParser.java */
/* define the package name for parser classes */
package com.nosliw.expression.parser;

public class NosliwExpressionParser/*@bgen(jjtree)*/implements NosliwExpressionParserTreeConstants, NosliwExpressionParserConstants {/*@bgen(jjtree)*/
  protected JJTNosliwExpressionParserState jjtree = new JJTNosliwExpressionParserState();
  public static void main(String args[]) throws ParseException, TokenMgrError {
                NosliwExpressionParser parser = new NosliwExpressionParser( System.in ) ;
                SimpleNode root = parser.Expression("");
                root.dump("");
  }

/*TOKEN : { < NAME : (["0"-"9","a"-"z","A"-"Z"])+ > }*/

/*

*/
  final public Token Name() throws ParseException {/*@bgen(jjtree) Name */
        SimpleNode jjtn000 = new SimpleNode(JJTNAME);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t ;
    try {
      t = jj_consume_token(CONSTANT);
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
jjtn000.value = t.image; {if ("" != null) return t;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/*
constant data, any format allowed, json, string literal, ...
*/
  final public void Constant() throws ParseException {/*@bgen(jjtree) CONSTANT */
        SimpleNode jjtn000 = new SimpleNode(JJTCONSTANT);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t ;
    try {
      jj_consume_token(5);
      t = jj_consume_token(CONSTANT);
      jj_consume_token(6);
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
jjtn000.value = t.image;
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/*
data type, it is appeared when do data type function call
*/
  final public void DataType() throws ParseException {/*@bgen(jjtree) DATATYPE */
        SimpleNode jjtn000 = new SimpleNode(JJTDATATYPE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t ;
    try {
      jj_consume_token(7);
      t = Name();
      jj_consume_token(8);
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
jjtn000.value = t.image;
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/*
variable in expression. 
*/
  final public void Variable() throws ParseException {/*@bgen(jjtree) VARIABLE */
        SimpleNode jjtn000 = new SimpleNode(JJTVARIABLE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t ;
    try {
      jj_consume_token(9);
      t = Name();
      jj_consume_token(10);
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
jjtn000.value = t.image;
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/*
represent any expression
*/
  final public SimpleNode Expression(String index) throws ParseException {/*@bgen(jjtree) EXPRESSION */
        SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);int i = 0;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 9:{
        Variable();
        Expression1();
        break;
        }
      case 5:{
        Constant();
        Expression1();
        break;
        }
      case 7:{
        DataType();
        jj_consume_token(11);
        Name();
        jj_consume_token(OPEN_PAR);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 5:
        case 7:
        case 9:{
          Expression(String.valueOf(i));
i++;
          label_1:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case COMMAR:{
              ;
              break;
              }
            default:
              jj_la1[0] = jj_gen;
              break label_1;
            }
            jj_consume_token(COMMAR);
            Expression(String.valueOf(i));
i++;
          }
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        jj_consume_token(CLOSE_PAR);
        Expression1();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
jjtn000.value=index;   {if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/*
it is create to avoid left recursion.
*/
  final public SimpleNode Expression1() throws ParseException {/*@bgen(jjtree) EXPRESSION1 */
        SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION1);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);int i = 0;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:{
        jj_consume_token(11);
        Name();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case OPEN_PAR:{
          jj_consume_token(OPEN_PAR);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 5:
          case 7:
          case 9:{
            Expression(String.valueOf(i));
i++;
            label_2:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case COMMAR:{
                ;
                break;
                }
              default:
                jj_la1[3] = jj_gen;
                break label_2;
              }
              jj_consume_token(COMMAR);
              Expression(String.valueOf(i));
i++;
            }
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            ;
          }
          jj_consume_token(CLOSE_PAR);
jjtn000.value="function";
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          ;
        }
        Expression1();
        break;
        }
      default:
        jj_la1[6] = jj_gen;

      }
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public NosliwExpressionParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[7];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x8,0x2a0,0x2a0,0x8,0x2a0,0x2,0x800,};
   }

  /** Constructor with InputStream. */
  public NosliwExpressionParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public NosliwExpressionParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new NosliwExpressionParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jjtree.reset();
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public NosliwExpressionParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new NosliwExpressionParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jjtree.reset();
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public NosliwExpressionParser(NosliwExpressionParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(NosliwExpressionParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jjtree.reset();
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[12];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 7; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 12; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
